--- a/u05/tarea_life/src/web/life.html
+++ b/u05/tarea_life/src/web/life.html
@@ -6,7 +6,7 @@
             Filas> <input type="text" maxlength="2" size="2" value="10" id="txtRows"/>
             Columnas> <input type="text" maxlength="2" size="2" value="10" id="txtCols"/>
             Células> <input type="text" size="2" value="25" id="txtNCells"/>
-            <input type="button" id="btnReset" value="Reset>>"/>
+            <input type="button" id="btnReset" value="Reset >>"/>
         </div>                
         <div style="width: 500px; height: 5px;"></div>
         <canvas id="canvas" width="500px" height="500px" style="border:1px solid #d3d3d3">
@@ -14,11 +14,11 @@
         </canvas>
         <div style="width: 498px; height: 5px;"></div>
         <div style="font-family: courier; font-size: 12px;border:1px solid #d3d3d3; width: 500px; height: 20px; background-color:bisque">
-            <input type="button" id="btnGen" value="NGen>>"/>        
+            <input type="button" id="btnGen" value="Next Gen >>"/>        
             Gen> <input type="text" size="2" value="1" id="txtGen" disabled/>
             Alive> <input type="text" size="2" value="20" id="txtAlive" disabled/>
             Grid <input type="checkbox" id="chkGrid" checked/>
         </div>        
-        <script src="life.js"></script> 
+        <script src="life_db.js"></script> 
     </body>
 </html>
