added u06/tarea_control version array

--- a/u05/map/map.html
+++ b/u05/map/map.html
@@ -6,10 +6,10 @@
             <input type="button" id="btnReset" value="Reset>>"/>
             &nbsp;Tipo Celda> 
             <select id="selType">
-            <option value="W">Muro</option>
-            <option value="F">Libre</option>
-            <option value="S">Inicio</option>
-            <option value="E">Fin</option>
+            <option value="FREE">Libre</option>
+            <option value="WATER">Agua</option>       
+            <option value="START">Inicio</option>
+            <option value="END">Fin</option>
             </select>
         </div>                
         <div style="width: 500px; height: 5px;"></div>
